add more keys, fix bugs, adjust readme

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                 <div id="leftPart">
                     <div id="misc">
                         <div class="button" id="clear" data-key="67"><p>AC</p></div>
-                        <div class="button" id="changeSign"><p>±</p></div>
-                        <div class="button" id="percentage"><p>%</p></div>
+                        <div class="button" id="changeSign"  data-key="192"><p>±</p></div>
+                        <div class="button" id="percentage" data-key="80"><p>%</p></div>
                     </div>
                     <div id="numbers">
                         <div class="button" data-key="55"><p>7</p></div>
