add backspace key

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                         <div class="button" data-key="51"><p>3</p></div>
                         <div class="button" data-key="48"><p>0</p></div>
                         <div class="button" data-key="190"><p>.</p></div>
+                        <div class="button" data-key="8"><p>⌫</p></div>
                     </div>
                 </div>
                 <div id="rightPart">
