--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div id="container">
             <div id="screen">
                 <div id="operation">
-                    <input value="">
+                    <input value="" disabled>
                 </div>
                 <div id="input">
                     <input value="0" disabled>
